@@ -1,8 +1,6 @@
 package com.bakdata.conquery.sql.conversion.model;
 
-import java.util.Collections;
-import java.util.List;
-
+import com.bakdata.conquery.sql.conversion.dialect.SqlFunctionProvider;
 import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
 import lombok.Builder;
 import lombok.Singular;
@@ -12,6 +10,9 @@ import org.jooq.Field;
 import org.jooq.Record;
 import org.jooq.TableLike;
 import org.jooq.impl.DSL;
+
+import java.util.Collections;
+import java.util.List;
 
 /**
  * Intermediate representation of an SQL query.
@@ -41,6 +42,16 @@ public class QueryStep {
 	 */
 	@Builder.Default
 	boolean unionAll = true;
+
+	@Builder.Default
+	boolean forTableExport = false;
+
+
+	/**
+	 * If the query should be negated or not.
+	 */
+	@Builder.Default
+	boolean negate = false;
 	/**
 	 * Determines if the select should be distinct.
 	 */
@@ -51,22 +62,23 @@ public class QueryStep {
 	@Singular
 	List<QueryStep> predecessors;
 
-	public static QueryStep createUnionAllStep(List<QueryStep> unionSteps, String cteName, List<QueryStep> predecessors) {
-		return createUnionStep(unionSteps, cteName, predecessors, true);
+	public static QueryStep createUnionAllStep(List<QueryStep> unionSteps, String cteName, List<QueryStep> predecessors, boolean negation, SqlFunctionProvider functionProvider) {
+		return createUnionStep(unionSteps, cteName, predecessors, true, negation, functionProvider);
 	}
 
-	public static QueryStep createUnionStep(List<QueryStep> unionSteps, String cteName, List<QueryStep> predecessors) {
-		return createUnionStep(unionSteps, cteName, predecessors, false);
+	public static QueryStep createUnionStep(List<QueryStep> unionSteps, String cteName, List<QueryStep> predecessors, boolean negation, SqlFunctionProvider functionProvider) {
+		return createUnionStep(unionSteps, cteName, predecessors, false, negation, functionProvider);
 	}
 
-	private static QueryStep createUnionStep(List<QueryStep> unionSteps, String cteName, List<QueryStep> predecessors, boolean unionAll) {
-		return unionSteps.get(0)
-						 .toBuilder()
-						 .cteName(cteName)
-						 .union(unionSteps.subList(1, unionSteps.size()))
-						 .unionAll(unionAll)
-						 .predecessors(predecessors)
-						 .build();
+	private static QueryStep createUnionStep(List<QueryStep> unionSteps, String cteName, List<QueryStep> predecessors, boolean unionAll, boolean negation, SqlFunctionProvider functionProvider) {
+		QueryStep first = unionSteps.getFirst();
+		return first.toBuilder()
+				.cteName(cteName)
+				.union(unionSteps.stream().skip(1).toList())
+				.unionAll(unionAll)
+				.predecessors(predecessors)
+				.negate(negation)
+				.build();
 	}
 
 	public static TableLike<Record> toTableLike(String fromTableName) {
